[package]
name = "ganzhe-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
ganzhe-rt = { path = "../ganzhe-rt" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
