[package]
name = "ganzhe-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
rand = "0.8"
anyhow = "1.0"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
